feat(governance): UI updates (#2941)

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -638,13 +638,13 @@
   "components.governance.drepKey": "DRep Key",
   "components.governance.delegatingToADRep": "Delegating to a DRep",
   "components.governance.abstaining": "Abstaining",
-  "components.governance.delegateVotingToDRep": "Delegate voting to {drepID}",
+  "components.governance.delegateVotingToDRep": "Delegate voting to\n{drepID}",
   "components.governance.selectAbstain": "Select abstain",
   "components.governance.selectNoConfidence": "Select no confidence",
   "components.governance.operations": "Operations",
   "components.governance.enterADrepIDAndPassword": "Enter a Drep ID and password to sign this transaction",
   "components.governance.drepID": "Drep ID",
-  "components.governance.thankYouForParticipating": "Thank you for participating in Governance",
+  "components.governance.thankYouForParticipating": "Thank you for participating in the Cardano Governance",
   "components.governance.thisTransactionCanTakeAWhile": "This transaction can take a while!",
   "components.governance.participationBenefits": "Participating in the Cardano Governance gives you the opportunity to participate in the voting as well as withdraw your staking rewards",
   "components.governance.goToGovernance": "Go to Governance",
@@ -662,8 +662,16 @@
   "components.governance.withdrawWarningTitle": "Withdraw warning",
   "components.governance.withdrawWarningDescription": "To withdraw your rewards, you need to participate in the Cardano Governance. Your rewards will continue to accumulate, but you are only able to withdraw it once you join the Governance process.",
   "components.governance.withdrawWarningButton": "Participate on governance",
-  "components.governance.enterDRepID": "Enter DRep ID",
+  "components.governance.enterDRepID": "Choose your Drep",
   "components.governance.enterPassword": "Enter password to sign this transaction",
+  "components.governance.hardwareWalletSupportComingSoon": "Hardware wallet support coming soon",
+  "components.governance.workingOnHardwareWalletSupport": "We are currently working on integrating hardware wallet support for Governance",
+  "components.governance.goToWallet": "Go to wallet",
+  "components.governance.txFees": "Transaction fee",
+  "components.governance.registerStakingKey": "Register staking key",
+  "components.governance.enterDrepIDInfo": "Identify your preferred DRep and enter their ID below to delegate your vote",
+  "components.governance.goToStaking": "Go to staking",
+  "components.governance.readyToCollectRewards": "You are now ready to collect your rewards",
   "crypto.errors.rewardAddressEmpty": "Reward address is empty.",
   "crypto.keystore.approveTransaction": "Authorize with your biometrics",
   "crypto.keystore.cancelButton": "Cancel",
