refactor: send step 1/summary

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -241,7 +241,7 @@
   "components.send.sendscreen.feeLabel": "Fee",
   "components.send.sendscreen.feeNotAvailable": "-",
   "components.send.sendscreen.receiver": "Receiver",
-  "components.send.sendscreen.resolvedAddress": "Related Address",
+  "components.send.sendscreen.resolvedAddress": "Resolved address",
   "components.send.sendscreen.resolverNoticeTitle": "Yoroi Supports",
   "components.send.sendscreen.searchTokens": "Search assets",
   "components.send.sendscreen.sendAllWarningAlert1": "All your {assetNameOrId} balance will be transferred in this transaction.",
@@ -716,7 +716,11 @@
   "scan.linksErrorUnsupportedVersion.help": "The link authority version is not yet supported by the app'",
   "scan.linksErrorUnsupportedVersion.title": "Unsupported version",
   "scan.title": "Scan the QR code",
-  "send.resolver.manyNameServersWarning": "There are more than one address for this domain. Please choose the desired name server.",
+  "send.warning.resolver.manyNameServers": "There are more than one address for this domain. Please choose the desired name server.",
+  "send.helper.resolver.resolvedAddress": "Resolved address",
+  "send.helper.resolverError.unsupportedDomain": "Please enter a supported domain",
+  "send.helper.addressError.invalid": "Please enter a valid address",
+  "send.helper.addressError.wrongNetwork": "Please enter an address for the current wallet network",
   "swap.listOrders.card.buttonText": "Cancel order",
   "swap.listOrders.completed": "completed orders",
   "swap.listOrders.emptyCompletedOrders": "No orders completed yet",
